--- a/index.html
+++ b/index.html
@@ -43,29 +43,37 @@ const computerSelection = getComputerChoice();
 const playerSelection = getPlayerChoice();
 
 //rock paper scissors function that will tell you if you won or lose
-function rockpaperscissors(computerSelection, playerSelection){
+function determinedWinner(computerSelection, playerSelection){
 
+
+
+   //initializing result variable to store who won
+    let result;
 //writing an if then else containing every possible outcome and trying to return the value(getting it wrong)
 if (playerSelection == 'scissors' && computerSelection == 'rock'){
-  return 'You lose, rock beats scissors';
+  result =  'You lose, rock beats scissors';
 } else if(playerSelection == 'rock' && computerSelection =='scissors'){
- return 'You win, rock beats scissors';
+ result =  'You win, rock beats scissors';
 } else if(playerSelection == 'paper' && computerSelection =='rock'){
-    return 'You win, paper beats rock';
+    result = 'You win, paper beats rock';
 } else if(playerSelection == 'rock' && computerSelection =='paper'){
-    return 'You lose, paper beats rock';
+    result =  'You lose, paper beats rock';
 } else if(playerSelection == 'scissors' && computerSelection =='paper'){
-    return 'You win, scissors beats paper';
+    result =  'You win, scissors beats paper';
 } else if(playerSelection == 'paper' && computerSelection =='scissors'){
-    return 'You lose, scissors beats paper';
-} else if((playerSelection == 'scissors' && computerSelection =='scissors') || (playerSelection == 'rock' && computerSelection =='rock') || (playerSelection == 'paper' && computerSelection =='paper')){
-    return 'Its a tie';
+    result =  'You lose, scissors beats paper';
+} else if(playerSelection === computerSelection ){
+    result =   'Its a tie';
+}
+//returning the result
+return result;
 }
 
 
-}
-
-rockpaperscissors();
+//storing the winner into a variable
+const winner = determinedWinner(playerSelection,computerSelection);
+//logging it into the console
+console.log(winner);
     </script>
 
 </body>
