changed the log in playerchoice to alert to make it easier to understand

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ if (answer == 'rock'  || answer == 'paper' || answer == 'scissors'){
     return answer;
 } else{
 
-    console.log("Enter a valid answer")
+    alert("Enter a valid answer")
     return getPlayerChoice();
 }
 }
