reworked to make an ui

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ computerWon.textContent = `Computer won - Player: ${playerWins} / Computer: ${co
 resultContainer.appendChild(computerWon);
 resetGame();
 
-
+//comment
 } else if(playerWins === 3){
     const playerWon = document.createElement('span');
     playerWon.textContent = `Player won - Player: ${playerWins} / Computer: ${computerWins}`;
