added start again span between games

--- a/index.html
+++ b/index.html
@@ -150,14 +150,19 @@ if(computerWins === 3){
 
 const computerWon = document.createElement('span');
 computerWon.textContent = `Computer won - Player: ${playerWins} / Computer: ${computerWins}`;
+startAgain.textContent = 'Start Again?'
 resultContainer.appendChild(computerWon);
+resultContainer.appendChild(startAgain);
 resetGame();
 
 //comment
 } else if(playerWins === 3){
     const playerWon = document.createElement('span');
+    const startAgain = document.createElement('span');
     playerWon.textContent = `Player won - Player: ${playerWins} / Computer: ${computerWins}`;
+    startAgain.textContent = 'Start Again?'
     resultContainer.appendChild(playerWon);
+    resultContainer.appendChild(startAgain);
     resetGame();
 }
 } else{
